--- a/available-dogs.html
+++ b/available-dogs.html
@@ -521,7 +521,7 @@
 
                 dogCards.forEach(card => {
                     if (filter === 'all' || card.getAttribute('data-category') === filter) {
-                        card.style.display = 'block';
+                        card.style.display = 'flex';
                     } else {
                         card.style.display = 'none';
                     }
