--- a/blog.html
+++ b/blog.html
@@ -116,9 +116,9 @@
                     </div>
                     <div class="blog-content">
                         <span class="blog-category">Puppy Training</span>
-                        <h3>The First 48 Hours: Bringing Puppy Home</h3>
+                        <h3>Bringing Puppy Home</h3>
                         <p>Essential steps to ensure your new puppy settles in calmly and safely.</p>
-                        <a href="blog-post-1.html" class="read-more">Read Full Article →</a>
+                        <a href="bringing-puppy-home.html" class="read-more">Read Full Article →</a>
                     </div>
                 </article>
 
@@ -130,23 +130,11 @@
                         <span class="blog-category">Behavior</span>
                         <h3>Understanding Dog Body Language</h3>
                         <p>How to read subtle signs of stress, happiness, and aggression in your dog.</p>
-                        <a href="blog-post-2.html" class="read-more">Read Full Article →</a>
+                        <a href="understanding-dog-body-language.html" class="read-more">Read Full Article →</a>
                     </div>
                 </article>
 
                 <!-- Article 3 -->
-                <article class="blog-card">
-                    <div class="blog-image"><img src="assets/images/blog3.jpg" alt="" srcset=""
-                            style="width: 100%; height: 100%;"></div>
-                    <div class="blog-content">
-                        <span class="blog-category">Protection Work</span>
-                        <h3>Myth: Protection Dogs Are Aggressive</h3>
-                        <p>Why a true protection dog is the safest dog you can have around your family.</p>
-                        <a href="blog-post-3.html" class="read-more">Read Full Article →</a>
-                    </div>
-                </article>
-
-                <!-- Article 4 -->
                 <article class="blog-card">
                     <div class="blog-image"><img src="assets/images/blog4.jpg" alt="" srcset=""
                             style="width: 100%; height: 100%;"></div>
@@ -154,7 +142,19 @@
                         <span class="blog-category">Health & Care</span>
                         <h3>Nutrition for Working Dogs</h3>
                         <p>Fueling your athlete: what to feed for optimal performance and health.</p>
-                        <a href="blog-post-4.html" class="read-more">Read Full Article →</a>
+                        <a href="nutrition-for-working-dogs.html" class="read-more">Read Full Article →</a>
+                    </div>
+                </article>
+
+                <!-- Article 4 -->
+                <article class="blog-card">
+                    <div class="blog-image"><img src="assets/images/blog3.jpg" alt="" srcset=""
+                            style="width: 100%; height: 100%;"></div>
+                    <div class="blog-content">
+                        <span class="blog-category">Protection Work</span>
+                        <h3>Myth: Protection Dogs Are Aggressive</h3>
+                        <p>Why a true protection dog is the safest dog you can have around your family.</p>
+                        <a href="protection-dogs-myth.html" class="read-more">Read Full Article →</a>
                     </div>
                 </article>
             </div>
@@ -272,7 +272,7 @@
                         photos, reviews, and
                         why families throughout the San Fernando Valley trust us with their canine companions.
                     </p>
-                    <div style="display: flex; flex-wrap: wrap; gap: 20px;">
+                    <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
                         <a href="https://m.yelp.com/biz/elite-k-9-group-san-fernando-valley?dd_referrer=https%3A%2F%2Fwww.google.be%2F"
                             target="_blank"
                             style="display: inline-flex; align-items: center; gap: 12px; background: #d32323; color: white; padding: 14px 28px; border-radius: 50px; font-weight: bold; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(211, 35, 35, 0.3); font-size: 1rem;">
