--- a/bringing-puppy-home.html
+++ b/bringing-puppy-home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The First 48 Hours: Bringing Puppy Home | Elite K9 Group</title>
+    <title>Bringing Puppy Home | Elite K9 Group</title>
     <meta name="description" content="Essential steps to ensure your new puppy settles in calmly and safely.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -130,7 +130,7 @@
 
     <header class="page-header text-center">
         <div class="container">
-            <h1>The First 48 Hours: Bringing Puppy Home</h1>
+            <h1>Bringing Puppy Home</h1>
             <p>Puppy Training</p>
         </div>
     </header>
