--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
 
                 <!-- Added CTA in About for better flow -->
-                <a href="consultation.html" class="text-link mt-2 text-highlight">See The Transformation &rarr;</a>
+                <!-- <a href="consultation.html" class="text-link mt-2 text-highlight">See The Transformation &rarr;</a> -->
             </div>
             <div class="about-image reveal reveal-zoom">
                 <!-- Image will be inserted here -->
