--- a/training.html
+++ b/training.html
@@ -292,67 +292,67 @@
             </div>
             <div class="team-gallery">
                 <div class="gallery-item reveal reveal-fade-up">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (1).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.1s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (2).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog1.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.2s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (3).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog2.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.3s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (4).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog3.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.1s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (5).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog4.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.2s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (6).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog5.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.3s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (7).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog6.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.4s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (8).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog7.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.1s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (9).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog8.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.2s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (10).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog9.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.3s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (11).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog10.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.4s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (12).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog11.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.1s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (13).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog12.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.2s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (14).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog14.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.3s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (15).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog16.jpg"
                         alt="Elite K9 Team Member">
                 </div>
                 <div class="gallery-item reveal reveal-fade-up" style="transition-delay: 0.4s;">
-                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog (16).jpg"
+                    <img src="assets/team/Dogs-training-California-Los-Angeles-Best-treiner-k9-protection-dog17.jpg"
                         alt="Elite K9 Team Member">
                 </div>
             </div>
