--- a/understanding-dog-body-language.html
+++ b/understanding-dog-body-language.html
@@ -141,7 +141,7 @@
             <div class="blog-featured-image">
 
                 <img src="assets/images/blog2.jpg" alt="" srcset=""
-                    style=" height: 400px; background-size: cover; background-position: center; border-radius: 12px; margin-bottom: 30px;">>
+                    style=" height: 400px; background-size: cover; background-position: center; border-radius: 12px; margin-bottom: 30px;">
             </div>
             <div class="blog-text-content">
                 <p><strong>Why Body Language Matters</strong></p>
