--- a/dog-profile.html
+++ b/dog-profile.html
@@ -325,7 +325,7 @@
                 born: 'April 2024',
                 sex: 'Male',
                 training: '',
-                description: '<strong>Athletic. Aware. Family-safe.</strong><br><br>Bex brings speed, intelligence, and clarity into one reliable protection companion. His obedience is sharp, his PH1-level protection is controlled, and his temperament is social and approachable.<br><br>✔ Responsive obedience<br>✔ Controlled protection | PH1 foundation<br>✔ Clear-headed and stable<br>✔ Great with kids and family environments<br>✔ Easy to live with, confident in public<br><br>Bex is ideal for active families who want protection without pressure or aggression.Limited availability.',
+                description: '<strong>Athletic. Aware. Family-safe.</strong><br><br>Bex brings speed, intelligence, and clarity into one reliable protection companion. His obedience is sharp, his protection work is controlled, and his temperament is social and approachable.<br><br>✔ Responsive obedience<br>✔ Controlled protection | Solid foundation<br>✔ Clear-headed and stable<br>✔ Great with kids and family environments<br>✔ Easy to live with, confident in public<br><br>Bex is ideal for active families who want protection without pressure or aggression.Limited availability.',
                 images: ['assets/Dogs/Bex-2-German-Short-Pointer-DetectionBomb-Dog/German Short Pointer-Dogs-For-Sale-California-Los-Angeles-Male-Bex-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Bex-2-German-Short-Pointer-DetectionBomb-Dog/German Short Pointer-Dogs-For-Sale-California-Los-Angeles-Male-Bex-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Bex-2-German-Short-Pointer-DetectionBomb-Dog/German Short Pointer-Dogs-For-Sale-California-Los-Angeles-Male-Bex-Best-treiner-k9-protection-dog2.jpg',
@@ -338,7 +338,7 @@
                 born: 'June 2025',
                 sex: 'Male',
                 training: '',
-                description: '<strong>Serious protection. Serious stability.</strong><br><br>Hunter is a PH1-trained Dutch Shepherd with precise obedience and confident protection skills. He works clean, stays composed, and responds instantly under pressure.<br><br>✔ Professional-level obedience<br>✔ Controlled protection | PH1<br>✔ Calm, confident mindset<br>✔ Excellent with children<br>✔ Stable in home and public settings<br><br>Hunter is built for families who demand reliability, control, and trust.Top-tier placement.',
+                description: '<strong>Serious protection. Serious stability.</strong><br><br>Hunter is an expertly trained Dutch Shepherd with precise obedience and confident protection skills. He works clean, stays composed, and responds instantly under pressure.<br><br>✔ Professional-level obedience<br>✔ Controlled protection | Advanced level<br>✔ Calm, confident mindset<br>✔ Excellent with children<br>✔ Stable in home and public settings<br><br>Hunter is built for families who demand reliability, control, and trust.Top-tier placement.',
                 images: ['assets/Dogs/Hunter-1.5-dutch-sheperd-sold/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Hunter-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Hunter-1.5-dutch-sheperd-sold/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Hunter-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Hunter-1.5-dutch-sheperd-sold/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Hunter-Best-treiner-k9-protection-dog2.jpg',
@@ -353,7 +353,7 @@
                 born: 'May 2025',
                 sex: 'Male',
                 training: '',
-                description: '<strong>Presence. Power. Discipline.</strong><br><br>Shogun is a dominant yet controlled Dutch Shepherd with strong obedience and proven PH1 protection work. He commands respect while remaining deeply loyal to his family.<br><br>✔ Sharp obedience and discipline<br>✔ Confident protection | PH1<br>✔ Clear-headed and stable<br>✔ Strong family bond, great with kids<br>✔ Reliable in real-world environments<br><br>Shogun is for clients seeking uncompromising protection with elite control.Private consultations only. ',
+                description: '<strong>Presence. Power. Discipline.</strong><br><br>Shogun is a dominant yet controlled Dutch Shepherd with strong obedience and proven professional protection work. He commands respect while remaining deeply loyal to his family.<br><br>✔ Sharp obedience and discipline<br>✔ Confident protection | Elite level<br>✔ Clear-headed and stable<br>✔ Strong family bond, great with kids<br>✔ Reliable in real-world environments<br><br>Shogun is for clients seeking uncompromising protection with elite control.Private consultations only. ',
                 images: ['assets/Dogs/Shogun-10-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Shogun-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Shogun-10-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Shogun-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Shogun-10-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Male-Shogun-Best-treiner-k9-protection-dog2.jpg',
@@ -366,7 +366,7 @@
                 born: 'February 2024',
                 sex: 'Female',
                 training: '',
-                description: '<strong>Elegant control with real protection.</strong><br><br>Stella combines smooth obedience, confident PH1 protection work, and an affectionate family temperament. She’s alert and capable without being overwhelming.<br><br>✔ Clean obedience and engagement<br>✔ Balanced protection | PH1<br>✔ Social, stable temperament<br>✔ Excellent with children<br>✔ Easy transition into family life<br><br>Stella is ideal for families wanting protection with a softer, intelligent presence.Limited placement available.',
+                description: '<strong>Elegant control with real protection.</strong><br><br>Stella combines smooth obedience, confident professional protection work, and an affectionate family temperament. She’s alert and capable without being overwhelming.<br><br>✔ Clean obedience and engagement<br>✔ Balanced protection | Foundation level<br>✔ Social, stable temperament<br>✔ Excellent with children<br>✔ Easy transition into family life<br><br>Stella is ideal for families wanting protection with a softer, intelligent presence.Limited placement available.',
                 images: ['assets/Dogs/Stella-2-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Stella-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Stella-2-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Stella-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Stella-2-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Stella-Best-treiner-k9-protection-dog2.jpg',
@@ -379,7 +379,7 @@
                 born: 'June 2025',
                 sex: 'Male',
                 training: '',
-                description: '<strong>Power built on control.</strong><br><br>Tank is a strong, driven PH1 Malinois with reliable obedience and serious protection ability. Despite his power, he is calm, affectionate, and family-safe.<br><br>✔ Strong obedience under distraction<br>✔ Intense yet controlled protection | PH1<br>✔ Clear-headed and confident<br>✔ Excellent with kids<br>✔ Loyal and people-oriented<br><br>Tank is for families who want strength, presence, and total reliability.Elite caliber.',
+                description: '<strong>Power built on control.</strong><br><br>Tank is a strong, driven protection Malinois with reliable obedience and serious protection ability. Despite his power, he is calm, affectionate, and family-safe.<br><br>✔ Strong obedience under distraction<br>✔ Intense yet controlled protection | Professional level<br>✔ Clear-headed and confident<br>✔ Excellent with kids<br>✔ Loyal and people-oriented<br><br>Tank is for families who want strength, presence, and total reliability.Elite caliber.',
                 images: ['assets/Dogs/Tank-10-month-Old-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Tank-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Tank-10-month-Old-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Tank-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Tank-10-month-Old-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Male-Tank-Best-treiner-k9-protection-dog2.jpg',
@@ -392,7 +392,7 @@
                 born: 'July 2025',
                 sex: 'Female',
                 training: '',
-                description: '<strong>Balanced. Calm. Trustworthy.</strong><br><br>Tarah is a PH1 Dutch Shepherd with smooth obedience and controlled protection work. She brings stability, awareness, and a loving family temperament.<br><br>✔ Consistent obedience<br>✔ Controlled protection | PH1<br>✔ Calm and social<br>✔ Gentle with children<br>✔ Comfortable in everyday family life<br><br>Tarah is perfect for families seeking dependable protection without stress.Private placement.',
+                description: '<strong>Balanced. Calm. Trustworthy.</strong><br><br>Tarah is a professionally trained Dutch Shepherd with smooth obedience and controlled protection work. She brings stability, awareness, and a loving family temperament.<br><br>✔ Consistent obedience<br>✔ Controlled protection | Solid foundation<br>✔ Calm and social<br>✔ Gentle with children<br>✔ Comfortable in everyday family life<br><br>Tarah is perfect for families seeking dependable protection without stress.Private placement.',
                 images: ['assets/Dogs/Tarah-9-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Tarah-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Tarah-9-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Tarah-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Tarah-9-month-Dutch-Sheperd/Dutch-Sheperd-Dogs-For-Sale-California-Los-Angeles-Female-Tarah-Best-treiner-k9-protection-dog2.jpg',
@@ -405,7 +405,7 @@
                 born: 'December 2024',
                 sex: 'Male',
                 training: '',
-                description: '<strong>Fast response. Clear mind.</strong><br><br>Xamee is a sharp PH1 Malinois with quick obedience and confident protection skills. He’s alert, responsive, and deeply bonded to his family.<br><br>✔ Fast, precise obedience<br>✔ Confident protection work | PH1<br>✔ Stable, social temperament<br>✔ Great with kids and family<br>✔ Reliable in public and home settings<br><br>Xamee is built for families who want elite protection with real companionship.Top 1 caliber.',
+                description: '<strong>Fast response. Clear mind.</strong><br><br>Xamee is a sharp, professionally trained Malinois with quick obedience and confident protection skills. He’s alert, responsive, and deeply bonded to his family.<br><br>✔ Fast, precise obedience<br>✔ Confident protection work | Elite level<br>✔ Stable, social temperament<br>✔ Great with kids and family<br>✔ Reliable in public and home settings<br><br>Xamee is built for families who want elite protection with real companionship.Top 1 caliber.',
                 images: ['assets/Dogs/Xamee-1.5-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Female-Xamee-Best-treiner-k9-protection-dog.jpg',
                     'assets/Dogs/Xamee-1.5-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Female-Xamee-Best-treiner-k9-protection-dog1.jpg',
                     'assets/Dogs/Xamee-1.5-Belgian-Malinois/Belgian-Malinois-Dogs-For-Sale-California-Los-Angeles-Female-Xamee-Best-treiner-k9-protection-dog2.jpg',
