--- a/future-breeding.html
+++ b/future-breeding.html
@@ -109,12 +109,12 @@
                     </div>
                     <div class="breeding-info">
                         <h3>Hunter</h3>
-                        <span class="breed">Dutch Shepherd (PH1 Trained)</span>
+                        <span class="breed">Dutch Shepherd (Professionally Trained)</span>
                         <p class="bio">Hunter is a powerhouse Dutch Shepherd with precise obedience and confident
                             protection skills. He works clean, stays composed, and is a top-tier prospect for producing
                             elite working bloodlines.</p>
                         <div class="breeding-specs">
-                            <span class="spec-item">PH1 Foundation</span>
+                            <span class="spec-item">Solid Foundation</span>
                             <span class="spec-item">Health Clear</span>
                             <span class="spec-item">Elite Drive</span>
                         </div>
@@ -156,12 +156,12 @@
                     </div>
                     <div class="breeding-info">
                         <h3>Stella</h3>
-                        <span class="breed">Dutch Shepherd (PH1 Trained)</span>
-                        <p class="bio">Stella combines smooth obedience, confident PH1 protection work, and an
+                        <span class="breed">Dutch Shepherd (Professionally Trained)</span>
+                        <p class="bio">Stella combines smooth obedience, confident professional protection work, and an
                             affectionate family temperament. She represents elegant control with real protection
                             capabilities for future litters.</p>
                         <div class="breeding-specs">
-                            <span class="spec-item">PH1 Foundation</span>
+                            <span class="spec-item">Solid Foundation</span>
                             <span class="spec-item">Social Nerve</span>
                             <span class="spec-item">OFA Clear</span>
                         </div>
