--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                             <div class="dog-slide-content">
                                 <h3>HUNTER</h3>
                                 <div class="divider-gold"></div>
-                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-role">ELITE TRAINED PROTECTOR</span>
                                 <span class="dog-breed">DUTCH SHEPHERD</span>
                             </div>
                         </a>
@@ -359,7 +359,7 @@
                             <div class="dog-slide-content">
                                 <h3>SHOGUN</h3>
                                 <div class="divider-gold"></div>
-                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-role">ELITE TRAINED PROTECTOR</span>
                                 <span class="dog-breed">DUTCH SHEPHERD</span>
                             </div>
                         </a>
@@ -373,7 +373,7 @@
                             <div class="dog-slide-content">
                                 <h3>STELLA</h3>
                                 <div class="divider-gold"></div>
-                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-role">ELITE TRAINED PROTECTOR</span>
                                 <span class="dog-breed">DUTCH SHEPHERD</span>
                             </div>
                         </a>
@@ -387,7 +387,7 @@
                             <div class="dog-slide-content">
                                 <h3>TANK</h3>
                                 <div class="divider-gold"></div>
-                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-role">ELITE TRAINED PROTECTOR</span>
                                 <span class="dog-breed">BELGIAN MALINOIS</span>
                             </div>
                         </a>
@@ -401,7 +401,7 @@
                             <div class="dog-slide-content">
                                 <h3>TARAH</h3>
                                 <div class="divider-gold"></div>
-                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-role">ELITE TRAINED PROTECTOR</span>
                                 <span class="dog-breed">DUTCH SHEPHERD</span>
                             </div>
                         </a>
@@ -415,7 +415,7 @@
                             <div class="dog-slide-content">
                                 <h3>XAMEE</h3>
                                 <div class="divider-gold"></div>
-                                <span class="dog-role">PH1 TRAINED PROTECTOR</span>
+                                <span class="dog-role">ELITE TRAINED PROTECTOR</span>
                                 <span class="dog-breed">BELGIAN MALINOIS</span>
                             </div>
                         </a>
