--- a/available-dogs.html
+++ b/available-dogs.html
@@ -90,8 +90,8 @@
 
     <header class="page-header text-center">
         <div class="container">
-            <h1>Trained Belgian Malinois & German Shepherds For Sale</h1>
-            <p>From female German shepherd puppies to fully trained Belgian Malinois service dogs.</p>
+            <h1>Elite trained protection dogs for sale</h1>
+
         </div>
     </header>
 
@@ -118,7 +118,7 @@
                     <span class="status-badge available">Available</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Dester - Future Champion</h3>
+                    <h3>Dester</h3>
                     <p class="breed">Belgian Malinois</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Female</span>
@@ -139,7 +139,7 @@
                     <span class="status-badge available">Available</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Berry – Elite Companion </h3>
+                    <h3>Berry</h3>
                     <p class="breed">Belgian Malinois</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Male</span>
@@ -160,7 +160,7 @@
                     <span class="status-badge available">Available</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Bex – Loyal Partner</h3>
+                    <h3>Bex</h3>
                     <p class="breed">German Short Pointer</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Male</span>
@@ -181,14 +181,15 @@
                     <span class="status-badge sold">Sold</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Hunter – Future Champion</h3>
+                    <h3>Hunter</h3>
                     <p class="breed">Dutch Shepherd</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In June 2025</span>
                     </div>
-                    <p class="description"><strong>Serious protection. Serious stability.</strong> Hunter is a
-                        PH1-trained Dutch Shepherd with precise obedience and confident protection skills. Built for
+                    <p class="description"><strong>Serious protection. Serious stability.</strong> Hunter is an
+                        expertly trained Dutch Shepherd with precise obedience and confident protection skills. Built
+                        for
                         families who demand reliability and control.</p>
                     <a href="dog-profile.html?id=hunter" class="btn-secondary full-width">View Profile</a>
                 </div>
@@ -202,14 +203,15 @@
                     <span class="status-badge available">Available</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Shogun – Strong Ally</h3>
+                    <h3>Shogun</h3>
                     <p class="breed">Dutch Shepherd</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In May 2025</span>
                     </div>
                     <p class="description"><strong>Presence. Power. Discipline.</strong> Shogun is a dominant yet
-                        controlled Dutch Shepherd with strong obedience and proven PH1 protection work. Uncompromising
+                        controlled Dutch Shepherd with strong obedience and proven professional protection work.
+                        Uncompromising
                         protection with elite control.</p>
                     <a href="dog-profile.html?id=shogun" class="btn-secondary full-width">View Profile</a>
                 </div>
@@ -223,14 +225,15 @@
                     <span class="status-badge available">Available</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Stella – Loyal Companion</h3>
+                    <h3>Stella</h3>
                     <p class="breed">Dutch Shepherd</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Female</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In February 2024</span>
                     </div>
                     <p class="description"><strong>Elegant control with real protection.</strong> Stella combines smooth
-                        obedience, confident PH1 protection work, and an affectionate family temperament. Alerts and
+                        obedience, confident professional protection work, and an affectionate family temperament.
+                        Alerts and
                         capable presence.</p>
                     <a href="dog-profile.html?id=stella" class="btn-secondary full-width">View Profile</a>
                 </div>
@@ -244,13 +247,13 @@
                     <span class="status-badge available">Available</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Tank – Smart Protector</h3>
+                    <h3>Tank</h3>
                     <p class="breed">Belgian Malinois</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In June 2025</span>
                     </div>
-                    <p class="description"><strong>Power built on control.</strong> Tank is a strong, driven PH1
+                    <p class="description"><strong>Power built on control.</strong> Tank is a strong, driven protection
                         Malinois with reliable obedience and serious protection ability. Calm, affectionate, and
                         family-safe.</p>
                     <a href="dog-profile.html?id=tank" class="btn-secondary full-width">View Profile</a>
@@ -265,13 +268,14 @@
                     <span class="status-badge available">Available</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Tarah – Elite Companion</h3>
+                    <h3>Tarah</h3>
                     <p class="breed">Dutch Shepherd</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Female</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In July 2025</span>
                     </div>
-                    <p class="description"><strong>Balanced. Calm. Trustworthy.</strong> Tarah is a PH1 Dutch Shepherd
+                    <p class="description"><strong>Balanced. Calm. Trustworthy.</strong> Tarah is a professionally
+                        trained Dutch Shepherd
                         with smooth obedience and controlled protection work. Perfect for families seeking dependable
                         protection.</p>
                     <a href="dog-profile.html?id=tarah" class="btn-secondary full-width">View Profile</a>
@@ -286,13 +290,14 @@
                     <span class="status-badge available">Available</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Xamee – Strong Ally</h3>
+                    <h3>Xamee</h3>
                     <p class="breed">Belgian Malinois</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Male</span>
                         <span><i class="fas fa-calendar-alt"></i> Born In December 2024</span>
                     </div>
-                    <p class="description"><strong>Fast response. Clear mind.</strong> Xamee is a sharp PH1 Malinois
+                    <p class="description"><strong>Fast response. Clear mind.</strong> Xamee is a sharp, professionally
+                        trained Malinois
                         with quick obedience and confident protection skills. Built for families who want elite
                         protection with companionship.</p>
                     <a href="dog-profile.html?id=xamee" class="btn-secondary full-width">View Profile</a>
@@ -304,7 +309,7 @@
                     <span class="status-badge sold">Sold</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Rex - Trained Protection Dog</h3>
+                    <h3>Rex</h3>
                     <p class="breed">German Shepherd</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Male</span>
@@ -325,7 +330,7 @@
                     <span class="status-badge sold">Sold</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Bella - Female German Shepherd / Malinois</h3>
+                    <h3>Bella</h3>
                     <p class="breed">Belgian Malinois</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Female</span>
@@ -344,7 +349,7 @@
                     <span class="status-badge sold">Sold</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Max - Started K9 Solutions</h3>
+                    <h3>Max</h3>
                     <p class="breed">Dutch Shepherd</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Male</span>
@@ -363,7 +368,7 @@
                     <span class="status-badge sold">Sold</span>
                 </div>
                 <div class="dog-details">
-                    <h3>Luna - Trained Companion</h3>
+                    <h3>Luna</h3>
                     <p class="breed">Doberman</p>
                     <div class="dog-specs">
                         <span><i class="fas fa-venus-mars"></i> Female</span>
@@ -377,13 +382,6 @@
 
         </div>
 
-        <div class="bloodline-info text-center mt-5 mb-5 reveal reveal-fade-up">
-            <p style="font-size: 1.1rem; color: #555; max-width: 800px; margin: 0 auto;">
-                If you want to verify your future dog's working bloodlines, you can do so at
-                <a href="https://www.bloedlijnen.nl" target="_blank"
-                    style="color: var(--primary-orange); font-weight: 600; text-decoration: underline;">bloedlijnen.nl</a>
-            </p>
-        </div>
     </div>
 
     <!-- Footer -->
